<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/pickers" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.hmct.wearable.widget.WearNumberPicker android:id="@id/month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffdba7" android:layout_gravity="center_vertical" android:id="@id/month_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dp_month" />
        <LinearLayout android:orientation="horizontal" android:id="@id/divider1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="32.0dip" android:layout_marginBottom="32.0dip" android:layoutDirection="ltr">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:importantForAccessibility="no" />
        </LinearLayout>
        <com.hmct.wearable.widget.WearNumberPicker android:id="@id/day" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffdba7" android:layout_gravity="center_vertical" android:id="@id/day_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dp_day" />
        <LinearLayout android:orientation="horizontal" android:id="@id/divider2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="32.0dip" android:layout_marginBottom="32.0dip" android:layoutDirection="ltr">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:importantForAccessibility="no" />
        </LinearLayout>
        <com.hmct.wearable.widget.WearNumberPicker android:id="@id/year" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffdba7" android:layout_gravity="center_vertical" android:id="@id/year_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dp_year" />
    </LinearLayout>
    <CalendarView android:id="@id/calendar_view" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="245.0dip" android:layout_height="280.0dip" android:layout_weight="1.0" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
</LinearLayout>