<?xml version="1.0" encoding="utf-8"?>
<android.support.wearable.view.DelayedConfirmationView android:layout_gravity="center" android:id="@id/delayed_confirmation" android:layout_width="fill_parent" android:layout_height="fill_parent" app:circle_color="@color/black" app:circle_radius="202.0dip" app:circle_radius_pressed="50.0dip" app:circle_border_width="1.0dip" app:circle_border_color="#ff32c2c4"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_gravity="center" android:id="@id/bitmap_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:alpha="0.5" />
    </FrameLayout>
    <RelativeLayout android:layout_gravity="center" android:id="@id/no_music_zone" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
        <ImageView android:id="@id/tick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/music_tick" android:layout_centerInParent="true" />
        <TextView android:textSize="40.0sp" android:textColor="#ffffdba7" android:id="@id/no_music" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_music" android:layout_below="@id/tick" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="center" android:id="@id/media_play_zone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="320.0dip" android:layout_height="320.0dip" android:layout_centerInParent="true">
            <RelativeLayout android:id="@id/media_text_zone" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <TextView android:textSize="28.0sp" android:textColor="#ffffdba7" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/song_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tracks_title" android:singleLine="true" />
                <TextView android:textSize="22.0sp" android:textColor="#ffffdba7" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/songer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/artists_title" android:singleLine="true" android:layout_below="@id/song_name" />
            </RelativeLayout>
            <ImageButton android:id="@id/button_prev" android:background="@drawable/music_background_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/music_last" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageButton android:id="@id/button_next" android:background="@drawable/music_background_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/music_next" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <ImageButton android:id="@id/button_stop" android:background="@drawable/music_background_material" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="80.0dip" android:src="@drawable/music_stop" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <com.hmct.wearable.widget.WearBottomSingleMenu android:id="@id/stop_zone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.wearable.view.DelayedConfirmationView>